# AutonomousVehicle

./: README.md
navbot_description/: CMakeLists.txt  package.xml
navbot_description/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
navbot_description/launch/: amcl.launch  gazebo.launch  map_server.launch  mapping.launch  move_base.launch  navigation.launch
navbot_description/scripts/: advanced_goal_handler.py
navbot_description/src/: GazeboTrafficLight.cpp  GazeboTrafficLight.hpp
navbot_description/worlds/: myhome.world
